Make cloneNode() copy the current value and checked properties for inputs.  Bug 197294, r+sr=jst